--- a/main.html
+++ b/main.html
@@ -1,2 +1,3 @@
 <head> StudentsEmail</head>
 <p>A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools </p>
+<img src="main_icon.jpg">
