--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
-<head> StudentsEmail</head>
-<p>A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools </p>
+<html><h1> StudentsEmail</h1>
+<body>A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools
 <img src="main_icon.jpg">
+</body>
+</html>
