--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
-<html><h1> StudentsEmail</h1>
+<html><h2> StudentsEmail</h2>
 <body>A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools
-<img src="main_icon.jpg">
+<img src="main_icon.jpg"  width= "100" , height="100">
 </body>
 </html>
