--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
-<html><h2> StudentsEmail</h2>
+<html>
+  <h1><img src="main_icon.jpg"></h1>
+  <h2> StudentsEmail</h2>
 <body>
 A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools
-<img src="main_icon.jpg"  style="width:500px;height:600px;">
 </body>
 </html>
