--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <html>
-  <h1><img src="main_icon.jpg"></h1>
+  <h><img src="main_icon.jpg"></h>
   <h2> StudentsEmail</h2>
 <body>
 A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools
