--- a/main.html
+++ b/main.html
@@ -1,7 +1,18 @@
 <html>
-  <h><img src="main_icon_small.jpg" class="center"></h>
-  <h2> StudentsEmail</h2>
-<body>
+  <head>
+    <title>StudentsEmail</title>
+    <style>
+      .img-container {
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="img-container"> <!-- Block parent element -->
+      <img src="main_icon_small.jpg" alt="main">
+      <body>
 A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools
 </body>
+    </div>
+  </body>
 </html>
