--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
   <body>
     <div class="img-container">
       <img src="main_icon_small.jpg" alt="main">
-<!--       <body>
+      <body>
 A mobile application to help parents organize their kids school work. The parent can browse his gmail inbox and organize the emails recieved from their kids schools
-</body> -->
+</body>
     </div>
   </body>
 </html>
